<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Ctrl_CmdListElement" Id="{163d4e72-b9dd-4d90-a938-7fc2b094dde2}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_Ctrl_CmdListElement :
STRUCT
	///command implemented in controller
	intCmd: INT;
	///command is available info for UI
	bolAvailable: BOOL;
	/// Name of command. Important for UI.
	strName: STRING(80);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>