<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_Ctrl_Info" Id="{a050d9c8-4cf5-47c1-9dac-a989da120536}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_Ctrl_Info :
STRUCT
	///name of controller instance
	strName				: STRING(80);
	///full name of controller instance
	strFullName			: STRING(80);
	///class of controller
	strType				: STRING(80);
	///unique controller instance identification number
	intCtrlId			: INT;
	///unique identification number of parent controller instance
	intParentCtrlId		: INT;
	///all inputs valid -> init done
	bolInitDone			: BOOL;
	///Childs
	p_afbChild			: ARRAY[0..Base_Const.cMaxNrOfChilds] OF POINTER TO FB_CtrlBase;
	///common interface array of childs
	p_aCIf				: ARRAY[0..Base_Const.cMaxNrOfChilds] OF POINTER TO T_Ctrl_CIf;
	// Child Count
	uinChildNbr			: UINT;
	// Absolut path to the controller
	strInstancePath		: STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>